# agentboard

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  review_board_run2.html  review_board_run3.html
.github/workflows/: agentboard-review.yml  ci.yml
bench/: report.py
examples/: paired_run.py  run_fk_graph.py  run_reliability_5x.py  run_repo_review.py  run_repo_review_llm.py  run_review.py  run_review_composite_fk.py  run_review_fix.py  run_review_perfile.py  run_text_review.py
notes/: GAUNTLET.md  gauntlet.md  model-comparison.md  prove-birth.md  prove.md
scripts/: render_pr_comment.py
src/agentboard/: __init__.py  api.py  cli.py  config.py  dataset.py  fingerprint.py  graph.py  loop.py  mcp_server.py  personas.py  proposal_cache.py  prove.py  providers.py  review.py  state.py
src/agentboard/agents/: critic_agent.py  fix_with_test_agent.py  gap_auditor.py  openai_agent.py  openai_explainer.py  reviewer_agent.py  test_repairer.py
src/agentboard/demo/: __init__.py
src/agentboard/experimental/: __init__.py  interfaces.py  personas.py
src/agentboard/experimental/agents/: fix_agent.py  fix_with_test_agent.py  openai_agent.py  peer_reviewer.py
src/agentboard/experimental/ingestion/: repo_adapter.py  text_adapter.py
src/agentboard/experimental/verifiers/: vitest_verifier.py
src/agentboard/experimental/whiteboards/: flow_adapter.py  html_adapter.py
src/agentboard/ingestion/: intent.py  output_invariants.py  pr_diff.py  tech_detect.py
src/agentboard/verifiers/: assertion_lint.py  finding_verifier.py  harness.py  pytest_harness.py  pytest_verifier.py  schema_verifier.py  transition_verifier.py  vitest_verifier.py
src/agentboard/whiteboards/: flow_adapter.py  tldraw_adapter.py
tests/: conftest.py  test_assertion_lint.py  test_audit_wiring.py  test_batch_attribution.py  test_board_path.py  test_config_path.py  test_config_preflight.py  test_dataset.py  test_determinism.py  test_env_scrub.py  test_error_surfacing.py  test_failure_classification.py  test_gate_e2e.py  test_gate_pytest_e2e.py  test_injection_placement.py  test_loop.py  test_max_tokens_rename.py  test_mcp_server.py  test_multitarget.py  test_openai_agent.py  test_partial_results.py  test_pnpm_pin.py  test_proposal_cache.py  test_prove_plan.py  test_prove_support.py  test_provider_routing.py  test_pytest_classifier.py  test_pytest_harness.py  test_pytest_test_picker.py  test_pytest_titles_and_strip.py  test_repair_round.py  test_sandbox_trust.py  test_systematic_artifacts.py  test_vitest_test_picker.py  test_worktree.py
tests/fixtures/demo_target/: demo.test.js  order_tool.js  package.json
tests/fixtures/py_target/: order_tool.py  pytest.ini  test_order_tool.py
