[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentboard"
version = "0.1.0"
description = "Project any multi-agent run as an iteration-tagged whiteboard: verify before commit, document everything."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=1.0",
    # Imported lazily at every call site (keeps import time down), but the
    # tool cannot propose a single test without it: undeclared, a clean
    # `pip install` yields a review that silently finds nothing.
    "openai>=1.0",
]

[project.scripts]
agentboard = "agentboard.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
