[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewgate"
version = "0.2.5"
description = "A code review gate that verifies changes by executing tests, not by judging diffs. An LLM proposes edge-case tests; a deterministic harness runs each one; a behavior is a gap only if its test runs and fails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ankita", email = "anp8729@gmail.com" }]
keywords = [
    "code-review",
    "testing",
    "llm",
    "agents",
    "verification",
    "vitest",
    "ci",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # The reviewer's default models are OpenAI; the auditor's default is
    # Claude. Both clients are imported lazily (fast startup), but the
    # documented review+audit flow needs both, so both are declared: an
    # undeclared client turns into a review that silently proposes nothing.
    "openai>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build"]
# The legacy whiteboard/loop path (agentboard.experimental) is the only code
# that needs langgraph. The core `agentboard review` gate does not, so it is
# an opt-in extra rather than a heavyweight default install.
whiteboard = ["langgraph>=1.0"]
# The MCP server (agentboard-mcp) — agentboard as a tool a coding agent
# calls over stdio. Optional for the same reason as whiteboard: the core
# CLI gate needs none of it.
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/anp0429/agentboard"
Repository = "https://github.com/anp0429/agentboard"
Issues = "https://github.com/anp0429/agentboard/issues"

[project.scripts]
agentboard = "agentboard.cli:main"
agentboard-mcp = "agentboard.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
# The legacy collaboration-loop stack is quarantined, not maintained; lint
# noise there should never block review-path work.
"src/agentboard/experimental/**" = ["E401", "E402", "E501", "E702", "F401"]

[tool.mypy]
# Pragmatic scope: the review path only. No strict mode; third-party stubs
# are not required. The experimental/ subpackage is the pre-gate
# collaboration-loop architecture and is excluded until the roadmap picks
# it back up.
files = ["src/agentboard"]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["src/agentboard/experimental/"]

[[tool.mypy.overrides]]
# exclude= stops direct collection, but mypy still follows the top-level
# package's optional legacy imports into experimental/; silence it there too.
module = "agentboard.experimental.*"
ignore_errors = true
